Fix sidebar alignment #12
Sidebar alignment and related css bugs fixed

--- a/assets/src/sass/4-layouts/_main.scss
+++ b/assets/src/sass/4-layouts/_main.scss
@@ -8,11 +8,20 @@
 
 //Sidebar
 .sidebar-wrap {
-    margin-left: 12px;
+    margin-right: 12px;
 }
 
-//Content and Sidebar Common
-.content-wrap,
+//Content Wrap
+.content-wrap {
+    padding: 16px;
+    margin-left: 12px;
+    margin-right: 12px;
+    border-radius: 8px;
+    flex-shrink: 1;
+    background-color: $white-text;
+}
+
+//Sidebar Wrap
 .sidebar-wrap {
     padding: 16px;
     border-radius: 8px;
